--- a/Paastopaivakirja/src/main/resources/fxml/ConsumptionScene.fxml
+++ b/Paastopaivakirja/src/main/resources/fxml/ConsumptionScene.fxml
@@ -9,44 +9,42 @@
 
 <VBox fx:controller="com.example.paastopaivakirja.ui.ConsumptionSceneController" prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
     <children>
-        <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
+        <AnchorPane  styleClass="pane"  stylesheets="@styles/styles.css" maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
             <children>
-                <DatePicker fx:id="date" layoutX="217.0" layoutY="30.0" prefHeight="25.0" prefWidth="134.0" />
-                <Button onAction="#selectDate" layoutX="351.0" layoutY="30.0" mnemonicParsing="false" text="Hae" />
-                
+                <DatePicker onAction="#selectDate" fx:id="date" layoutX="217.0" layoutY="30.0" prefHeight="25.0" prefWidth="134.0" />
                 
                 <Button layoutX="470.0" layoutY="340.0" mnemonicParsing="false" onAction="#submit" text="Tallenna ja palaa" />
-                <Text fx:id="dateText" layoutX="30.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Täydennä kuluttamasi rahamäärät" wrappingWidth="160.0" />
+                <Text styleClass="basicText" fx:id="dateText" layoutX="30.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Täydennä kuluttamasi rahamäärät" wrappingWidth="160.0" />
                 
-                <Text layoutX="25.0" layoutY="85.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Vaatteet" wrappingWidth="93.13671875" />
+                <Text styleClass="basicText" layoutX="25.0" layoutY="85.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Vaatteet" wrappingWidth="93.13671875" />
                 <Slider fx:id="clothesSlider" onValueChange="#setClothes" layoutX="128.0" layoutY="85.0" max="500.0" />
-                <Text fx:id="clothesSliderValue" layoutX="277.0" layoutY="85.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0 €" />
+                <Text styleClass="basicText" fx:id="clothesSliderValue" layoutX="277.0" layoutY="85.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0 €" />
                 
-                <Text layoutX="25.0" layoutY="125.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Kengät" wrappingWidth="100.4609375" />
+                <Text styleClass="basicText" layoutX="25.0" layoutY="125.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Kengät" wrappingWidth="100.4609375" />
                 <Slider fx:id="shoesSlider" onValueChange="#setShoes" layoutX="125.0" layoutY="125.0" max="500.0"  prefHeight="14.0" prefWidth="140.0" />
-                <Text fx:id="shoesSliderValue" layoutX="277.0" layoutY="125.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0 €" />
+                <Text styleClass="basicText" fx:id="shoesSliderValue" layoutX="277.0" layoutY="125.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0 €" />
                 
-                <Text layoutX="25.0" layoutY="165.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Elektroniikka" wrappingWidth="100.4609375" />
+                <Text styleClass="basicText" layoutX="25.0" layoutY="165.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Elektroniikka" wrappingWidth="100.4609375" />
                 <Slider fx:id="electronicsSlider" onValueChange="#setElectronics" layoutX="128.0" layoutY="165.0" max="500.0"  prefHeight="14.0" prefWidth="140.0" />
-                <Text fx:id="electronicsSliderValue" layoutX="277.0" layoutY="165.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0 €" />
+                <Text styleClass="basicText" fx:id="electronicsSliderValue" layoutX="277.0" layoutY="165.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0 €" />
                 
-                <Text layoutX="25.0" layoutY="205.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Kirjat ja lehdet" wrappingWidth="100.4609375" />
+                <Text styleClass="basicText" layoutX="25.0" layoutY="205.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Kirjat ja lehdet" wrappingWidth="100.4609375" />
                 <Slider fx:id="booksSlider" onValueChange="#setBooks" layoutX="128.0" layoutY="205.0" max="500.0" prefHeight="14.0" prefWidth="140.0" />
-                <Text fx:id="booksSliderValue" layoutX="276.0" layoutY="205.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0 €" />
+                <Text styleClass="basicText" fx:id="booksSliderValue" layoutX="276.0" layoutY="205.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0 €" />
                 
-                <Text layoutX="25.0" layoutY="245.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Vapaa-ajan tapahtumat" wrappingWidth="100.4609375" />
+                <Text styleClass="basicText" layoutX="25.0" layoutY="245.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Vapaa-ajan tapahtumat" wrappingWidth="100.4609375" />
                 <Slider fx:id="freetimeSlider" onValueChange="#setFreetime" layoutX="128.0" layoutY="245.0" max="500.0"  prefHeight="14.0" prefWidth="140.0" />
-                <Text fx:id="freetimeSliderValue" layoutX="276.0" layoutY="245.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0 €" />
+                <Text styleClass="basicText" fx:id="freetimeSliderValue" layoutX="276.0" layoutY="245.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0 €" />
                 
-                <Text layoutX="25.0" layoutY="285.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Puhelin ja internet" wrappingWidth="100.4609375" />
+                <Text styleClass="basicText" layoutX="25.0" layoutY="285.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Puhelin ja internet" wrappingWidth="100.4609375" />
                 <Slider fx:id="phoneSlider" onValueChange="#setPhone" layoutX="128.0" layoutY="285.0" max="500.0"  prefHeight="14.0" prefWidth="140.0" />
-                <Text fx:id="phoneSliderValue" layoutX="275.0" layoutY="285.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0 €" />
+                <Text styleClass="basicText" fx:id="phoneSliderValue" layoutX="275.0" layoutY="285.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0 €" />
                                
                 <Button onAction="#setDefault" layoutX="457.0" layoutY="30.0" mnemonicParsing="false" text="Palaa tallentamatta" />
         
-                <Text layoutX="345.0" layoutY="85.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Muu kulutus" wrappingWidth="93.13671875" />
+                <Text styleClass="basicText" layoutX="345.0" layoutY="85.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Muu kulutus" wrappingWidth="93.13671875" />
                 <Slider fx:id="miscellaneousSlider" layoutX="423.0" layoutY="85.0" max="500.0" onValueChange="#setMiscellaneous" />
-                <Text fx:id="miscellaneousSliderValue" layoutX="585.0" layoutY="85.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0 €" />
+                <Text styleClass="basicText" fx:id="miscellaneousSliderValue" layoutX="585.0" layoutY="85.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0 €" />
             </children>
         </AnchorPane>
     </children>
