--- a/Paastopaivakirja/src/main/resources/fxml/FoodEmissionScene.fxml
+++ b/Paastopaivakirja/src/main/resources/fxml/FoodEmissionScene.fxml
@@ -9,52 +9,51 @@
 
 <VBox fx:controller="com.example.paastopaivakirja.ui.FoodEmissionSceneController" prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
     <children>
-        <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
+        <AnchorPane  styleClass="pane"  stylesheets="@styles/styles.css" maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
             <children>
-                <DatePicker fx:id="date" layoutX="217.0" layoutY="30.0" prefHeight="25.0" prefWidth="134.0" />
-                <Button onAction="#selectDate" layoutX="351.0" layoutY="30.0" mnemonicParsing="false" text="Hae" />
-                
+                <DatePicker onAction="#selectDate" fx:id="date" layoutX="217.0" layoutY="30.0" prefHeight="25.0" prefWidth="134.0" />
+     
                 <Button onAction="#submit" layoutX="434.0" layoutY="340.0" mnemonicParsing="false" text="Tallenna ja palaa" />
-                <Text fx:id="dateText" layoutX="30.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Täydennä käyttämäsi ruoka-aineet" wrappingWidth="160.0" />
+                <Text styleClass="basicText" fx:id="dateText" layoutX="30.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Täydennä käyttämäsi ruoka-aineet" wrappingWidth="160.0" />
                 
-                <Text layoutX="25.0" layoutY="85.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nauta ja lammas" wrappingWidth="93.13671875" />
+                <Text styleClass="basicText" layoutX="25.0" layoutY="85.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nauta ja lammas" wrappingWidth="93.13671875" />
                 <Slider fx:id="cowSlider" onValueChange="#setCow" layoutX="128.0" layoutY="85.0" max="500.0" />
-                <Text fx:id="cowSliderValue" layoutX="277.0" layoutY="85.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0 g" />
+                <Text styleClass="basicText" fx:id="cowSliderValue" layoutX="277.0" layoutY="85.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0 g" />
                 
-                <Text layoutX="25.0" layoutY="125.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sika ja siipikarja" wrappingWidth="100.4609375" />
+                <Text styleClass="basicText" layoutX="25.0" layoutY="125.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sika ja siipikarja" wrappingWidth="100.4609375" />
                 <Slider fx:id="pigSlider" onValueChange="#setPig" layoutX="128.0" layoutY="125.0" max="500.0" prefHeight="14.0" prefWidth="140.0" />
-                <Text fx:id="pigSliderValue" layoutX="276.0" layoutY="125.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0 g" />
+                <Text styleClass="basicText" fx:id="pigSliderValue" layoutX="276.0" layoutY="125.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0 g" />
                 
-                <Text layoutX="25.0" layoutY="166.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Kala ja äyriäiset" wrappingWidth="100.4609375" />
+                <Text styleClass="basicText" layoutX="25.0" layoutY="166.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Kala ja äyriäiset" wrappingWidth="100.4609375" />
                 <Slider fx:id="fishSlider" onValueChange="#setFish" layoutX="128.0" layoutY="165.0" max="500.0" prefHeight="14.0" prefWidth="140.0" />
-                <Text fx:id="fishSliderValue" layoutX="277.0" layoutY="165.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0 g" />
+                <Text styleClass="basicText" fx:id="fishSliderValue" layoutX="277.0" layoutY="165.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0 g" />
                 
-                <Text layoutX="25.0" layoutY="205.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Juusto ja maitotuotteet" wrappingWidth="100.4609375" />
+                <Text styleClass="basicText" layoutX="25.0" layoutY="205.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Juusto ja maitotuotteet" wrappingWidth="100.4609375" />
                 <Slider fx:id="cheeseSlider" onValueChange="#setCheese" layoutX="128.0" layoutY="205.0" max="500.0" prefHeight="14.0" prefWidth="140.0" />
-                <Text fx:id="cheeseSliderValue" layoutX="276.0" layoutY="205.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0 kg" />
+                <Text styleClass="basicText" fx:id="cheeseSliderValue" layoutX="276.0" layoutY="205.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0 kg" />
                 
-                <Text layoutX="25.0" layoutY="256.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Riisi" wrappingWidth="100.4609375" />
+                <Text styleClass="basicText" layoutX="25.0" layoutY="256.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Riisi" wrappingWidth="100.4609375" />
                 <Slider fx:id="riceSlider" onValueChange="#setRice" layoutX="128.0" layoutY="245.0" max="500.0" prefHeight="14.0" prefWidth="140.0" />
-                <Text fx:id="riceSliderValue" layoutX="276.0" layoutY="256.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0 kg" />
+                <Text styleClass="basicText" fx:id="riceSliderValue" layoutX="276.0" layoutY="256.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0 kg" />
                 
-                <Text layoutX="25.0" layoutY="295.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Munat" wrappingWidth="100.4609375" />
+                <Text styleClass="basicText" layoutX="25.0" layoutY="295.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Munat" wrappingWidth="100.4609375" />
                 <Slider fx:id="eggSlider" onValueChange="#setEgg" layoutX="128.0" layoutY="285.0" max="10.0" prefHeight="14.0" prefWidth="140.0" />
-                <Text fx:id="eggSliderValue" layoutX="275.0" layoutY="296.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0 kpl" />
+                <Text styleClass="basicText" fx:id="eggSliderValue" layoutX="275.0" layoutY="296.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0 kpl" />
                
-                <Text layoutX="25.0" layoutY="338.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ravintoloihin ja kahviloihin käyttämäsi rahamäärä" wrappingWidth="100.4609375" />
+                <Text styleClass="basicText" layoutX="25.0" layoutY="338.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ravintoloihin ja kahviloihin käyttämäsi rahamäärä" wrappingWidth="100.4609375" />
                 <Slider fx:id="restaurantSlider" onValueChange="#setRestaurant" layoutX="128.0" layoutY="345.0" max="500.0" prefHeight="14.0" prefWidth="140.0" />
-                <Text fx:id="restaurantSliderValue" layoutX="277.0" layoutY="357.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0 €" />
+                <Text styleClass="basicText" fx:id="restaurantSliderValue" layoutX="277.0" layoutY="357.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0 €" />
                 
                 
-                <Text layoutX="328.0" layoutY="85.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Kasvihuonekasvikset" wrappingWidth="111.13671875" />
+                <Text styleClass="basicText" layoutX="328.0" layoutY="85.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Kasvihuonekasvikset" wrappingWidth="111.13671875" />
                 <Slider fx:id="vegetableSlider" onValueChange="#setVegetable" layoutX="446.0" layoutY="85.0" max="500.0" />
-                <Text fx:id="vegetableSliderValue" layoutX="590.0" layoutY="85.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0 g" />
+                <Text styleClass="basicText" fx:id="vegetableSliderValue" layoutX="590.0" layoutY="85.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0 g" />
             
-                <Text layoutX="328.0" layoutY="125.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Maitotuotteet" wrappingWidth="111.13671875" />
+                <Text styleClass="basicText" layoutX="328.0" layoutY="125.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Maitotuotteet" wrappingWidth="111.13671875" />
                 <Slider fx:id="milkSlider" onValueChange="#setMilk" layoutX="446.0" layoutY="125.0" max="500.0" />
-                <Text fx:id="milkSliderValue" layoutX="590.0" layoutY="125.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0 g" />
+                <Text styleClass="basicText" fx:id="milkSliderValue" layoutX="590.0" layoutY="125.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0 g" />
                 
-                 <Text layoutX="328.0" layoutY="188.0" strokeType="OUTSIDE" strokeWidth="0.0" 
+                 <Text styleClass="basicText" layoutX="328.0" layoutY="188.0" strokeType="OUTSIDE" strokeWidth="0.0" 
                        text="Huom: näiden kategorioiden ulkopuolelle jäävät ruoka-aineet lasketaan suoraan kiinteisiin vuosipäästöihin" wrappingWidth="300.0" />
                 
                 <Button onAction="#setDefaultValues" layoutX="457.0" layoutY="30.0" mnemonicParsing="false" text="Palaa tallentamatta"  />
