--- a/Paastopaivakirja/src/main/resources/fxml/HomeScene.fxml
+++ b/Paastopaivakirja/src/main/resources/fxml/HomeScene.fxml
@@ -7,25 +7,25 @@
 <!-->tämä voi vielä muuttua <-->
 <VBox fx:controller="com.example.paastopaivakirja.ui.HomeSceneController" prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
     <children>
-        <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
+        <AnchorPane  styleClass="pane"  stylesheets="@styles/styles.css" maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
             <children>
-                <Text layoutX="81.0" layoutY="263.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="149.0" />
-                <Text fx:id="yearlyTotal" layoutX="30.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Kiinteät vuosipäästösi:" wrappingWidth="300.0" />
-                <Text fx:id="todaysTotal" layoutX="30.0" layoutY="80.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tämänpäiväiset päästösi:" wrappingWidth="300.0" />
-                <Text fx:id="summary" layoutX="30.0" layoutY="110.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Kertyneet vuosipäästösi:" wrappingWidth="203.13671875" />
-                <Text fx:id="total" layoutX="30.0" layoutY="140.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Yhteensä:" wrappingWidth="203.13671875" />
+                <Text styleClass="basicTextBig" layoutX="81.0" layoutY="263.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="149.0" />
+                <Text styleClass="basicTextBig" fx:id="yearlyTotal" layoutX="30.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Kiinteät vuosipäästösi:" wrappingWidth="300.0" />
+                <Text styleClass="basicTextBig" fx:id="todaysTotal" layoutX="30.0" layoutY="80.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tämänpäiväiset päästösi:" wrappingWidth="300.0" />
+                <Text styleClass="basicTextBig" fx:id="summary" layoutX="30.0" layoutY="110.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Kertyneet vuosipäästösi:" wrappingWidth="300" />
+                <Text styleClass="basicTextBig" fx:id="total" layoutX="30.0" layoutY="140.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Yhteensä:" wrappingWidth="203.13671875" />
                 <Button onAction="#logOut" layoutX="450.0" layoutY="238.0" mnemonicParsing="false" text="Kirjaudu ulos" />
-                <Text fx:id="name" layoutX="418.0" layoutY="98.0" strokeType="OUTSIDE" strokeWidth="0.0" text="" wrappingWidth="149.0" />
-                <Text fx:id="startDate" layoutX="418.0" layoutY="120.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tervetuloa" wrappingWidth="149.0" />
+                <Text styleClass="basicTextBig" fx:id="name" layoutX="418.0" layoutY="98.0" strokeType="OUTSIDE" strokeWidth="0.0" text="" wrappingWidth="149.0" />
+                <Text styleClass="basicTextBig" fx:id="startDate" layoutX="418.0" layoutY="120.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tervetuloa" wrappingWidth="149.0" />
                 <Button onAction="#calculateYearlyEmissions" layoutX="25.0" layoutY="148.0" mnemonicParsing="false" text="Laske kiinteät vuosipäästöt" />
            
-                <Button layoutX="25.0" layoutY="190.0" mnemonicParsing="false" onAction="#calculateTodaysFood" text="Lisää ruokapäästöt" />
-                <Button layoutX="24.0" layoutY="230.0" mnemonicParsing="false" onAction="#calculateTodaysTraffic" text="Lisää liikennepäästöt" />
-                <Button layoutX="26.0" layoutY="270.0" mnemonicParsing="false" onAction="#calculateTodaysConsumption" text="Lisää kulutuspäästöt" />
+                <Button layoutX="25.0" layoutY="200.0" mnemonicParsing="false" onAction="#calculateTodaysFood" text="Lisää ruokapäästöt" />
+                <Button layoutX="25.0" layoutY="250.0" mnemonicParsing="false" onAction="#calculateTodaysTraffic" text="Lisää liikennepäästöt" />
+                <Button layoutX="25.0" layoutY="300.0" mnemonicParsing="false" onAction="#calculateTodaysConsumption" text="Lisää kulutuspäästöt" />
             
-                <Text fx:id="foodCheck" layoutX="200.0" layoutY="205.0" strokeType="OUTSIDE" strokeWidth="0.0" text="✔" />
-                <Text fx:id="trafficCheck" layoutX="200.0" layoutY="243.0" strokeType="OUTSIDE" strokeWidth="0.0" text="✔" />
-                <Text fx:id="consumptionCheck" layoutX="200.0" layoutY="283.0" strokeType="OUTSIDE" strokeWidth="0.0" text="✔" />
+                <Text styleClass="basicTextBig" fx:id="foodCheck" layoutX="200.0" layoutY="225.0" strokeType="OUTSIDE" strokeWidth="0.0" text="✔" />
+                <Text styleClass="basicTextBig" fx:id="trafficCheck" layoutX="200.0" layoutY="275.0" strokeType="OUTSIDE" strokeWidth="0.0" text="✔" />
+                <Text styleClass="basicTextBig" fx:id="consumptionCheck" layoutX="200.0" layoutY="325.0" strokeType="OUTSIDE" strokeWidth="0.0" text="✔" />
             </children>
         </AnchorPane>
     </children>
