--- a/Paastopaivakirja/src/main/resources/fxml/YearlyEmissionScene.fxml
+++ b/Paastopaivakirja/src/main/resources/fxml/YearlyEmissionScene.fxml
@@ -11,20 +11,20 @@
 
 <VBox fx:controller="com.example.paastopaivakirja.ui.YearlyEmissionSceneController" prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
     <children>
-        <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
+        <AnchorPane  styleClass="pane"  stylesheets="@styles/styles.css" maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
             <children>
-                <Text layoutX="30.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Asunnon koko neliömetreinä:" wrappingWidth="109.13671875" />
+                <Text styleClass="basicText" layoutX="30.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Asunnon koko neliömetreinä:" wrappingWidth="109.13671875" />
                 <Slider fx:id="houseSizeSlider" onValueChange="#setHouseSize" layoutX="128.0" layoutY="47.0" min="1.0" max="300.0" />
-                <Text fx:id="houseSizeSliderValue" layoutX="277.0" layoutY="60.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1" />     
-                <Text layoutX="30.0" layoutY="90.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Asukkaiden määrä" wrappingWidth="93.13671875" />
+                <Text styleClass="basicText" fx:id="houseSizeSliderValue" layoutX="277.0" layoutY="60.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1" />     
+                <Text styleClass="basicText" layoutX="30.0" layoutY="90.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Asukkaiden määrä" wrappingWidth="93.13671875" />
                 <Slider fx:id="populationSlider" onValueChange="#setPopulation" layoutX="128.0" layoutY="86.0" min="1.0" max="10.0" />
-                <Text fx:id="populationSliderValue" layoutX="277.0" layoutY="97.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1" />
-                <Text layoutX="30.0" layoutY="130.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sähkönkulutus vuodessa" wrappingWidth="100.4609375" />
+                <Text styleClass="basicText" fx:id="populationSliderValue" layoutX="277.0" layoutY="97.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1" />
+                <Text styleClass="basicText" layoutX="30.0" layoutY="130.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sähkönkulutus vuodessa" wrappingWidth="100.4609375" />
                 <Slider fx:id="electricitySlider" onValueChange="#setElectricity" layoutX="128.0" layoutY="125.0" min="1.0" max="5000.0" prefHeight="14.0" prefWidth="140.0" />
-                <Text fx:id="electricitySliderValue" layoutX="277.0" layoutY="136.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0" />
+                <Text styleClass="basicText" fx:id="electricitySliderValue" layoutX="277.0" layoutY="136.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0" />
                 <CheckBox fx:id="ecoCheck" layoutX="134.0" layoutY="150.0" mnemonicParsing="false" text="Käytän ekosähköä" />
                 <Separator layoutX="76.0" layoutY="170.0" prefWidth="200.0" />
-                <Text layoutX="30.0" layoutY="210.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Asumismuoto:" wrappingWidth="100.4609375" />
+                <Text styleClass="basicText" layoutX="30.0" layoutY="210.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Asumismuoto:" wrappingWidth="100.4609375" />
                 <RadioButton fx:id="apartmentRadioButton" layoutX="128.0" layoutY="210.0" mnemonicParsing="false" text="kerrostalo" />
                 <RadioButton fx:id="houseRadioButton" layoutX="128.0" layoutY="230.0" mnemonicParsing="false" text="omakotitalo" />
                 <RadioButton fx:id="rowHouseRadioButton" layoutX="128.0" layoutY="250.0" mnemonicParsing="false" text="rivitalo" />
