--- a/Paastopaivakirja/src/main/resources/fxml/FoodEmissionScene.fxml
+++ b/Paastopaivakirja/src/main/resources/fxml/FoodEmissionScene.fxml
@@ -13,7 +13,7 @@
             <children>
                 <DatePicker onAction="#selectDate" fx:id="date" layoutX="217.0" layoutY="30.0" prefHeight="25.0" prefWidth="134.0" />
      
-                <Button onAction="#submit" layoutX="434.0" layoutY="340.0" mnemonicParsing="false" text="Tallenna ja palaa" />
+                <Button onAction="#submit" layoutX="470.0" layoutY="340.0" mnemonicParsing="false" text="Tallenna ja palaa" />
                 <Text styleClass="basicText" fx:id="dateText" layoutX="30.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Täydennä käyttämäsi ruoka-aineet" wrappingWidth="160.0" />
                 
                 <Text styleClass="basicText" layoutX="25.0" layoutY="85.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nauta ja lammas" wrappingWidth="93.13671875" />
@@ -53,8 +53,10 @@
                 <Slider fx:id="milkSlider" onValueChange="#setMilk" layoutX="446.0" layoutY="125.0" max="500.0" />
                 <Text styleClass="basicText" fx:id="milkSliderValue" layoutX="590.0" layoutY="125.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0 g" />
                 
-                 <Text styleClass="basicText" layoutX="328.0" layoutY="188.0" strokeType="OUTSIDE" strokeWidth="0.0" 
-                       text="Huom: näiden kategorioiden ulkopuolelle jäävät ruoka-aineet lasketaan suoraan kiinteisiin vuosipäästöihin" wrappingWidth="300.0" />
+                <Text styleClass="basicText" layoutX="328.0" layoutY="188.0" strokeType="OUTSIDE" strokeWidth="0.0" 
+                      text="Huom: näiden kategorioiden ulkopuolelle jäävät ruoka-aineet lasketaan suoraan kiinteisiin vuosipäästöihin" wrappingWidth="300.0" />
+                
+                <Button layoutX="470.0" layoutY="286.0" mnemonicParsing="false" onAction="#save" text="Tallenna" />
                 
                 <Button onAction="#setDefaultValues" layoutX="457.0" layoutY="30.0" mnemonicParsing="false" text="Palaa tallentamatta"  />
             </children>
