--- a/Paastopaivakirja/src/main/resources/fxml/ConsumptionScene.fxml
+++ b/Paastopaivakirja/src/main/resources/fxml/ConsumptionScene.fxml
@@ -13,7 +13,7 @@
             <children>
                 <DatePicker onAction="#selectDate" fx:id="date" layoutX="217.0" layoutY="30.0" prefHeight="25.0" prefWidth="134.0" />
                 
-                <Button layoutX="470.0" layoutY="340.0" mnemonicParsing="false" onAction="#submit" text="Tallenna ja palaa" />
+                <Button styleClass="basicButton" layoutX="470.0" layoutY="340.0" mnemonicParsing="false" onAction="#submit" text="Tallenna ja palaa" />
                 <Text styleClass="basicText" fx:id="dateText" layoutX="30.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Täydennä kuluttamasi rahamäärät" wrappingWidth="160.0" />
                 
                 <Text styleClass="basicText" layoutX="25.0" layoutY="85.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Vaatteet" wrappingWidth="93.13671875" />
@@ -40,8 +40,8 @@
                 <Slider fx:id="phoneSlider" onValueChange="#setPhone" layoutX="128.0" layoutY="285.0" max="500.0"  prefHeight="14.0" prefWidth="140.0" />
                 <Text styleClass="basicText" fx:id="phoneSliderValue" layoutX="275.0" layoutY="285.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0 €" />
                                
-                <Button onAction="#setDefault" layoutX="457.0" layoutY="30.0" mnemonicParsing="false" text="Palaa tallentamatta" />
-                <Button layoutX="470.0" layoutY="230.0" mnemonicParsing="false" onAction="#save" text="Tallenna" />
+                <Button styleClass="basicButton" onAction="#setDefault" layoutX="457.0" layoutY="30.0" mnemonicParsing="false" text="Palaa tallentamatta" />
+                <Button styleClass="basicButton" layoutX="470.0" layoutY="230.0" mnemonicParsing="false" onAction="#save" text="Tallenna" />
                 <Text styleClass="basicText" fx:id="infoText" layoutX="470.0" layoutY="300.0" strokeType="OUTSIDE" strokeWidth="0.0" text="" />
           
                 
