--- a/Paastopaivakirja/src/main/resources/fxml/FoodEmissionScene.fxml
+++ b/Paastopaivakirja/src/main/resources/fxml/FoodEmissionScene.fxml
@@ -13,7 +13,7 @@
             <children>
                 <DatePicker onAction="#selectDate" fx:id="date" layoutX="217.0" layoutY="30.0" prefHeight="25.0" prefWidth="134.0" />
      
-                <Button onAction="#submit" layoutX="470.0" layoutY="340.0" mnemonicParsing="false" text="Tallenna ja palaa" />
+                <Button styleClass="basicButton" onAction="#submit" layoutX="470.0" layoutY="340.0" mnemonicParsing="false" text="Tallenna ja palaa" />
                 <Text styleClass="basicText" fx:id="dateText" layoutX="30.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Täydennä käyttämäsi ruoka-aineet" wrappingWidth="160.0" />
                 
                 <Text styleClass="basicText" layoutX="25.0" layoutY="85.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nauta ja lammas" wrappingWidth="93.13671875" />
@@ -56,10 +56,10 @@
                 <Text styleClass="basicText" layoutX="328.0" layoutY="188.0" strokeType="OUTSIDE" strokeWidth="0.0" 
                       text="Huom: näiden kategorioiden ulkopuolelle jäävät ruoka-aineet lasketaan suoraan kiinteisiin vuosipäästöihin" wrappingWidth="300.0" />
                 
-                <Button layoutX="470.0" layoutY="230.0" mnemonicParsing="false" onAction="#save" text="Tallenna" />
+                <Button styleClass="basicButton" layoutX="470.0" layoutY="230.0" mnemonicParsing="false" onAction="#save" text="Tallenna" />
                 <Text styleClass="basicText" fx:id="infoText" layoutX="470.0" layoutY="300.0" strokeType="OUTSIDE" strokeWidth="0.0" text="" />
           
-                <Button onAction="#setDefaultValues" layoutX="457.0" layoutY="30.0" mnemonicParsing="false" text="Palaa tallentamatta"  />
+                <Button styleClass="basicButton" onAction="#setDefaultValues" layoutX="457.0" layoutY="30.0" mnemonicParsing="false" text="Palaa tallentamatta"  />
             </children>
         </AnchorPane>
     </children>
