--- a/Paastopaivakirja/src/main/resources/fxml/HomeScene.fxml
+++ b/Paastopaivakirja/src/main/resources/fxml/HomeScene.fxml
@@ -14,14 +14,14 @@
                 <Text styleClass="basicTextBig" fx:id="todaysTotal" layoutX="30.0" layoutY="80.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tämänpäiväiset päästösi:" wrappingWidth="300.0" />
                 <Text styleClass="basicTextBig" fx:id="summary" layoutX="30.0" layoutY="110.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Kertyneet vuosipäästösi:" wrappingWidth="300" />
                 <Text styleClass="basicTextBig" fx:id="total" layoutX="30.0" layoutY="140.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Yhteensä:" wrappingWidth="203.13671875" />
-                <Button onAction="#logOut" layoutX="450.0" layoutY="238.0" mnemonicParsing="false" text="Kirjaudu ulos" />
+                <Button styleClass="basicButton" onAction="#logOut" layoutX="450.0" layoutY="238.0" mnemonicParsing="false" text="Kirjaudu ulos" />
                 <Text styleClass="welcomeText" fx:id="name" layoutX="418.0" layoutY="98.0" strokeType="OUTSIDE" strokeWidth="0.0" text="" wrappingWidth="149.0" />
                 <Text styleClass="basicTextBig" fx:id="startDate" layoutX="418.0" layoutY="120.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tervetuloa" wrappingWidth="149.0" />
-                <Button onAction="#calculateYearlyEmissions" layoutX="25.0" layoutY="148.0" mnemonicParsing="false" text="Laske kiinteät vuosipäästöt" />
+                <Button styleClass="basicButton" onAction="#calculateYearlyEmissions" layoutX="25.0" layoutY="148.0" mnemonicParsing="false" text="Laske kiinteät vuosipäästöt" />
            
-                <Button layoutX="25.0" layoutY="200.0" mnemonicParsing="false" onAction="#calculateTodaysFood" text="Lisää ruokapäästöt" />
-                <Button layoutX="25.0" layoutY="250.0" mnemonicParsing="false" onAction="#calculateTodaysTraffic" text="Lisää liikennepäästöt" />
-                <Button layoutX="25.0" layoutY="300.0" mnemonicParsing="false" onAction="#calculateTodaysConsumption" text="Lisää kulutuspäästöt" />
+                <Button styleClass="basicButton" layoutX="25.0" layoutY="200.0" mnemonicParsing="false" onAction="#calculateTodaysFood" text="Lisää ruokapäästöt" />
+                <Button styleClass="basicButton" layoutX="25.0" layoutY="250.0" mnemonicParsing="false" onAction="#calculateTodaysTraffic" text="Lisää liikennepäästöt" />
+                <Button styleClass="basicButton" layoutX="25.0" layoutY="300.0" mnemonicParsing="false" onAction="#calculateTodaysConsumption" text="Lisää kulutuspäästöt" />
             
                 <Text styleClass="basicTextBig" fx:id="foodCheck" layoutX="200.0" layoutY="225.0" strokeType="OUTSIDE" strokeWidth="0.0" text="✔" />
                 <Text styleClass="basicTextBig" fx:id="trafficCheck" layoutX="200.0" layoutY="275.0" strokeType="OUTSIDE" strokeWidth="0.0" text="✔" />
